[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
identity-io = { path = "io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sha2 = "0.10.5"
hex-literal = "0.3.4"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
