[package]
name = "identity"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
identity-io = { path = "io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sha2 = "0.10.6"
hex-literal = "0.3.4"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
