[package]
name = "identity"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
scale-info = { version = "2.3.0", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sha2 = "0.10.6"
hex-literal = "0.3.4"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
