[package]
name = "identity-io"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
gstd = { git = "https://github.com/gear-tech/gear.git" }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
