[package]
name = "identity-io"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
